* 2013-04-30 - marcus.klein@open-xchange.com

 - Fix for bug 24724: Revoked version of org.apache.log4j OSGi bundle to 1.2.13. This version does not split log messages when using
   SyslogAppender. Log messages are truncated by the underlying UDP network traffic. Newer version splits too long log messages which makes
   the log output more unreadable.

* 2013-04-17 - thorben.betten@open-xchange.com

 - Fix for bug 25957: Deny "vbscript" URLs

* 2013-04-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 25837: Added several enhancements to avoid flooding of the distributed hazelcast topic for cache events

* 2013-04-12 - marcus.klein@open-xchange.com

 - Fix for bug 25819: Changing the IMAP server, IMAP login and SMTP server is now possible for user objects.

* 2013-04-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 24662: Added dynamic checksum calculation for X-ABCROP-RECTANGLE parameter 

* 2013-04-10 - thorben.betten@open-xchange.com

 - Fix for bug 25808: Fixed sending documents as mail attachments
 - Fix for bug 25802: Trying to bypass parsing a message from stream
 - Fix for bug 25792: Deal with possibly non-mail-safe E-Mail addresses
 - Fix for bug 24519: Ignore "@Open-Xchange" suffix during Content-Id look-up
 - Fix for bug 25806: Proper cache invalidation

* 2013-04-08 - thorben.betten@open-xchange.com

 - Fix for bug 25753: Sane Content-Type value

* 2013-04-08 - marc.arens@open-xchange.com

 - Fix for bug: 25039 - Files: Uploading a new file version of 10MB times out without user notification
 - Fix for bug: 25474 - Unexpected error: null when sending mail
 - Fix for bug: 25285 - publication api always returns http as protocol

* 2013-04-07 - thorben.betten@open-xchange.com

 - Fix for bug 25715: Check if specified quota is in allowed range for INT(10) UNSIGNED
 - Fix for bug 19150: Check existence of appropriate property on bundle start-up
 - Fix for bug 25732: Lowered log level for commonly raised "Folder not found" error code
