@@ -25,5 +25,5 @@
 <booleanAttribute key="tracing" value="false"/>
 <booleanAttribute key="useCustomFeatures" value="false"/>
 <booleanAttribute key="useDefaultConfigArea" value="true"/>
-<stringAttribute key="workspace_bundles" value="com.google.common@default:default,com.hazelcast@default:default,com.openexchange.admin.autocontextid@default:default,com.openexchange.admin.console@default:default,com.openexchange.admin.plugin.hosting@default:default,com.openexchange.admin.reseller.rmi@default:default,com.openexchange.admin.reseller@default:default,com.openexchange.admin.rmi@default:default,com.openexchange.admin.soap.context@default:default,com.openexchange.admin.soap.group@default:default,com.openexchange.admin.soap.reseller@default:default,com.openexchange.admin.soap.resource@default:default,com.openexchange.admin.soap.taskmgmt@default:default,com.openexchange.admin.soap.user@default:default,com.openexchange.admin.soap.util@default:default,com.openexchange.admin@default:default,com.openexchange.ajp@default:default,com.openexchange.apps.manifests.json@default:default,com.openexchange.appsuite@default:default,com.openexchange.authentication.database@default:default,com.openexchange.authorization.standard@default:default,com.openexchange.caching.events@default:default,com.openexchange.caching@default:default,com.openexchange.calendar.json@default:default,com.openexchange.calendar@default:default,com.openexchange.capabilities.json@default:default,com.openexchange.capabilities@default:default,com.openexchange.charset@default:default,com.openexchange.chat.db@default:default,com.openexchange.chat.json@default:default,com.openexchange.chat@default:default,com.openexchange.cluster.discovery.empty@default:default,com.openexchange.cluster.discovery@default:default,com.openexchange.common@default:default,com.openexchange.config.cascade.context@default:default,com.openexchange.config.cascade.user@default:default,com.openexchange.config.cascade@default:default,com.openexchange.configread@default:default,com.openexchange.contact.storage.rdb@default:default,com.openexchange.contactcollector@default:default,com.openexchange.contacts.json@default:default,com.openexchange.control@default:default,com.openexchange.conversion.engine@default:default,com.openexchange.conversion.servlet@default:default,com.openexchange.conversion.simple@default:default,com.openexchange.conversion@default:default,com.openexchange.crypto@default:default,com.openexchange.data.conversion.ical.ical4j@default:default,com.openexchange.database@default:default,com.openexchange.dataretention@default:default,com.openexchange.datatypes.genericonf.storage@default:default,com.openexchange.datatypes.genericonf@default:default,com.openexchange.documentation.json@default:default,com.openexchange.documentation@default:default,com.openexchange.file.storage.composition@default:default,com.openexchange.file.storage.config@default:default,com.openexchange.file.storage.generic@default:default,com.openexchange.file.storage.infostore@default:default,com.openexchange.file.storage.json@default:default,com.openexchange.file.storage@default:default,com.openexchange.folder.json@default:default,com.openexchange.freebusy@default:default,com.openexchange.frontend.uwa.json@default:default,com.openexchange.frontend.uwa@default:default,com.openexchange.global@default:default,com.openexchange.group.json.manage@default:default,com.openexchange.groupware.settings.extensions@default:default,com.openexchange.groupware.tools@default:default,com.openexchange.hazelcast.configuration@default:default,com.openexchange.html@default:default,com.openexchange.http.client.json@default:default,com.openexchange.http.client.xml@default:default,com.openexchange.http.client@default:default,com.openexchange.http.deferrer@default:default,com.openexchange.http.testservlet@default:default,com.openexchange.i18n@default:default,com.openexchange.imap@default:default,com.openexchange.importexport@default:default,com.openexchange.index@default:default,com.openexchange.java@default:default,com.openexchange.jslob.config@default:default,com.openexchange.jslob.json@default:default,com.openexchange.jslob.storage.db@default:default,com.openexchange.jslob@default:default,com.openexchange.mail.filter@default:default,com.openexchange.management.impl@default:default,com.openexchange.management@default:default,com.openexchange.mdns@default:default,com.openexchange.messaging.facebook@default:default,com.openexchange.messaging.generic@default:default,com.openexchange.messaging.json@default:default,com.openexchange.messaging.rss@default:default,com.openexchange.messaging.twitter@default:default,com.openexchange.messaging@default:default,com.openexchange.modules.json@default:default,com.openexchange.modules.model@default:default,com.openexchange.modules.storage@default:default,com.openexchange.monitoring@default:default,com.openexchange.oauth.facebook@default:default,com.openexchange.oauth.json@default:default,com.openexchange.oauth.linkedin@default:default,com.openexchange.oauth.msn@default:default,com.openexchange.oauth.provider@default:default,com.openexchange.oauth.twitter@default:default,com.openexchange.oauth.yahoo@default:default,com.openexchange.oauth@default:default,com.openexchange.osgi@default:default,com.openexchange.pop3@default:default,com.openexchange.preview@default:default,com.openexchange.proxy.servlet@default:default,com.openexchange.proxy@default:default,com.openexchange.publish.basic@default:default,com.openexchange.publish.json@default:default,com.openexchange.publish.microformats@default:default,com.openexchange.publish.online.infostore@default:default,com.openexchange.publish@default:default,com.openexchange.push.imapidle@default:default,com.openexchange.push.udp@default:default,com.openexchange.push@default:default,com.openexchange.quota@default:default,com.openexchange.rdiff@default:default,com.openexchange.resource.managerequest@default:default,com.openexchange.rmi@default:default,com.openexchange.secret.recovery.json@default:default,com.openexchange.secret.recovery@default:default,com.openexchange.secret@default:default,com.openexchange.server@default:default,com.openexchange.sessiond@default:default,com.openexchange.sessionstorage@default:default,com.openexchange.smtp@default:default,com.openexchange.soap.cxf@default:default,com.openexchange.sql@default:default,com.openexchange.subscribe.crawler@default:default,com.openexchange.subscribe.facebook@default:default,com.openexchange.subscribe.json@default:default,com.openexchange.subscribe.linkedin@default:default,com.openexchange.subscribe.microformats@default:default,com.openexchange.subscribe.msn@default:default,com.openexchange.subscribe.yahoo@default:default,com.openexchange.subscribe@default:default,com.openexchange.system.extension@default:false,com.openexchange.tasks.json@default:default,com.openexchange.templating.json@default:default,com.openexchange.templating@default:default,com.openexchange.textxtraction@default:default,com.openexchange.threadpool@default:default,com.openexchange.twitter@default:default,com.openexchange.tx@default:default,com.openexchange.unifiedinbox@default:default,com.openexchange.url.mail.attachment@default:default,com.openexchange.user.copy@default:default,com.openexchange.user.json@default:default,com.openexchange.version@default:default,com.openexchange.xerces.sun@default:default,com.openexchange.xml@default:default,org.apache.tika@default:default,org.ho.jyaml@default:default,org.json@default:default,org.xmlpull@default:default"/>
+<stringAttribute key="workspace_bundles" value="com.google.common@default:default,com.hazelcast@default:default,com.openexchange.admin.autocontextid@default:default,com.openexchange.admin.console@default:default,com.openexchange.admin.plugin.hosting@default:default,com.openexchange.admin.reseller.rmi@default:default,com.openexchange.admin.reseller@default:default,com.openexchange.admin.rmi@default:default,com.openexchange.admin.soap.context@default:default,com.openexchange.admin.soap.group@default:default,com.openexchange.admin.soap.reseller@default:default,com.openexchange.admin.soap.resource@default:default,com.openexchange.admin.soap.taskmgmt@default:default,com.openexchange.admin.soap.user@default:default,com.openexchange.admin.soap.util@default:default,com.openexchange.admin@default:default,com.openexchange.ajp@default:default,com.openexchange.apps.manifests.json@default:default,com.openexchange.appsuite@default:default,com.openexchange.authentication.database@default:default,com.openexchange.authorization.standard@default:default,com.openexchange.caching.events@default:default,com.openexchange.caching@default:default,com.openexchange.calendar.json@default:default,com.openexchange.calendar@default:default,com.openexchange.capabilities.json@default:default,com.openexchange.capabilities@default:default,com.openexchange.charset@default:default,com.openexchange.chat.db@default:default,com.openexchange.chat.json@default:default,com.openexchange.chat@default:default,com.openexchange.cluster.discovery.empty@default:default,com.openexchange.cluster.discovery@default:default,com.openexchange.common@default:default,com.openexchange.config.cascade.context@default:default,com.openexchange.config.cascade.user@default:default,com.openexchange.config.cascade@default:default,com.openexchange.configread@default:default,com.openexchange.contact.storage.rdb@default:default,com.openexchange.contactcollector@default:default,com.openexchange.contacts.json@default:default,com.openexchange.control@default:default,com.openexchange.conversion.engine@default:default,com.openexchange.conversion.servlet@default:default,com.openexchange.conversion.simple@default:default,com.openexchange.conversion@default:default,com.openexchange.crypto@default:default,com.openexchange.data.conversion.ical.ical4j@default:default,com.openexchange.database@default:default,com.openexchange.dataretention@default:default,com.openexchange.datatypes.genericonf.storage@default:default,com.openexchange.datatypes.genericonf@default:default,com.openexchange.documentation.json@default:default,com.openexchange.documentation@default:default,com.openexchange.file.storage.composition@default:default,com.openexchange.file.storage.config@default:default,com.openexchange.file.storage.generic@default:default,com.openexchange.file.storage.infostore@default:default,com.openexchange.file.storage.json@default:default,com.openexchange.file.storage@default:default,com.openexchange.folder.json@default:default,com.openexchange.freebusy@default:default,com.openexchange.frontend.uwa.json@default:default,com.openexchange.frontend.uwa@default:default,com.openexchange.global@default:default,com.openexchange.group.json.manage@default:default,com.openexchange.groupware.settings.extensions@default:default,com.openexchange.groupware.tools@default:default,com.openexchange.hazelcast.configuration@default:default,com.openexchange.html@default:default,com.openexchange.http.client.json@default:default,com.openexchange.http.client.xml@default:default,com.openexchange.http.client@default:default,com.openexchange.http.deferrer@default:default,com.openexchange.http.testservlet@default:default,com.openexchange.i18n@default:default,com.openexchange.imap@default:default,com.openexchange.importexport@default:default,com.openexchange.index@default:default,com.openexchange.java@default:default,com.openexchange.jslob.config@default:default,com.openexchange.jslob.json@default:default,com.openexchange.jslob.storage.db@default:default,com.openexchange.jslob@default:default,com.openexchange.mail.filter@default:default,com.openexchange.management.impl@default:default,com.openexchange.management@default:default,com.openexchange.mdns@default:default,com.openexchange.messaging.facebook@default:default,com.openexchange.messaging.generic@default:default,com.openexchange.messaging.json@default:default,com.openexchange.messaging.rss@default:default,com.openexchange.messaging.twitter@default:default,com.openexchange.messaging@default:default,com.openexchange.modules.json@default:default,com.openexchange.modules.model@default:default,com.openexchange.modules.storage@default:default,com.openexchange.monitoring@default:default,com.openexchange.net@default:default,com.openexchange.oauth.facebook@default:default,com.openexchange.oauth.json@default:default,com.openexchange.oauth.linkedin@default:default,com.openexchange.oauth.msn@default:default,com.openexchange.oauth.provider@default:default,com.openexchange.oauth.twitter@default:default,com.openexchange.oauth.yahoo@default:default,com.openexchange.oauth@default:default,com.openexchange.osgi@default:default,com.openexchange.pop3@default:default,com.openexchange.preview@default:default,com.openexchange.proxy.servlet@default:default,com.openexchange.proxy@default:default,com.openexchange.publish.basic@default:default,com.openexchange.publish.json@default:default,com.openexchange.publish.microformats@default:default,com.openexchange.publish.online.infostore@default:default,com.openexchange.publish@default:default,com.openexchange.push.imapidle@default:default,com.openexchange.push.udp@default:default,com.openexchange.push@default:default,com.openexchange.quota@default:default,com.openexchange.rdiff@default:default,com.openexchange.resource.managerequest@default:default,com.openexchange.rmi@default:default,com.openexchange.secret.recovery.json@default:default,com.openexchange.secret.recovery@default:default,com.openexchange.secret@default:default,com.openexchange.server@default:default,com.openexchange.sessiond@default:default,com.openexchange.sessionstorage@default:default,com.openexchange.smtp@default:default,com.openexchange.soap.cxf@default:default,com.openexchange.sql@default:default,com.openexchange.subscribe.crawler@default:default,com.openexchange.subscribe.facebook@default:default,com.openexchange.subscribe.json@default:default,com.openexchange.subscribe.linkedin@default:default,com.openexchange.subscribe.microformats@default:default,com.openexchange.subscribe.msn@default:default,com.openexchange.subscribe.yahoo@default:default,com.openexchange.subscribe@default:default,com.openexchange.system.extension@default:false,com.openexchange.tasks.json@default:default,com.openexchange.templating.json@default:default,com.openexchange.templating@default:default,com.openexchange.textxtraction@default:default,com.openexchange.threadpool@default:default,com.openexchange.twitter@default:default,com.openexchange.tx@default:default,com.openexchange.unifiedinbox@default:default,com.openexchange.url.mail.attachment@default:default,com.openexchange.user.copy@default:default,com.openexchange.user.json@default:default,com.openexchange.version@default:default,com.openexchange.xerces.sun@default:default,com.openexchange.xml@default:default,javax.mail@default:default,org.apache.tika@default:default,org.ho.jyaml@default:default,org.json@default:default,org.xmlpull@default:default"/>
 </launchConfiguration>
